--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,7 +1,7 @@
   <div class="contents row">
     <%= form_tag("/tweets/#{@tweet.id}", method: :patch ) do %>
       <h3>
-        編集する
+        editする
       </h3>
       <input placeholder="Image Url" type="text" name="image" value="<%= @tweet.image %>" autofocus="true">
       <textarea cols="30" name="text" placeholder="text" rows="10"><%= @tweet.text %></textarea>
